# MarathonRecomp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  dev_report.yml
.github/workflows/: validate-internal.yml  validate.yml
MarathonRecomp/: CMakeLists.txt  app.cpp  app.h  exports.cpp  main.cpp  misc_impl.cpp  stdafx.h
MarathonRecomp/api/: Marathon.h  Marathon.inl  README.md
MarathonRecomp/api/Sonicteam/: Actor.h  AppMarathon.h  DocMarathonImp.h  DocMarathonState.h  GameImp.h  GameMode.h  (+1 more)
MarathonRecomp/apu/: embedded_player.cpp  embedded_player.h  xma_decoder.cpp  xma_decoder.h
MarathonRecomp/cpu/: guest_thread.cpp  guest_thread.h
MarathonRecomp/gpu/: video.cpp  video.h
MarathonRecomp/install/: installer.cpp  installer.h  update_checker.cpp
MarathonRecomp/kernel/: heap.cpp  imports.cpp  xam.cpp  xdm.h
MarathonRecomp/locale/: config_locale.cpp  locale.cpp
MarathonRecomp/mod/: mod_loader.cpp
MarathonRecomp/patches/: CGameModeStageTitle_patches.cpp  CHudPause_patches.cpp  CTitleStateIntro_patches.cpp  CTitleStateMenu_patches.cpp  TitleTask_patches.cpp  aspect_ratio_patches.cpp  audio_patches.cpp  camera_patches.cpp  fps_patches.cpp  frontend_listener.cpp  input_patches.cpp  inspire_patches.cpp  misc_patches.cpp  object_patches.cpp  player_patches.cpp  resident_patches.cpp  video_patches.cpp
MarathonRecomp/ui/: achievement_menu.cpp  achievement_overlay.cpp  button_guide.cpp  game_window.cpp  game_window.h  imgui_utils.cpp  imgui_utils.h  installer_wizard.cpp  installer_wizard.h  message_window.cpp  options_menu.cpp  options_menu.h  options_menu_thumbnails.cpp
MarathonRecomp/user/: config.cpp  config.h  config_def.h  paths.h
MarathonRecomp/utils/: bit_stream.cpp  ring_buffer.cpp
MarathonRecompLib/: CMakeLists.txt
MarathonRecompLib/config/: Marathon.toml
MarathonRecompLib/shader/: shader_cache.h
UnleashedRecomp/: CMakeLists.txt  app.cpp  app.h  main.cpp  misc_impl.cpp  sdl_events.h
UnleashedRecomp/apu/: xma_decoder.cpp  xma_decoder.h
UnleashedRecomp/cpu/: guest_thread.cpp  guest_thread.h
UnleashedRecomp/gpu/: video.cpp  video.h
UnleashedRecomp/kernel/: heap.cpp  imports.cpp  xam.cpp  xdm.h
UnleashedRecomp/mod/: mod_loader.cpp
UnleashedRecomp/os/: logger.h
UnleashedRecomp/patches/: CGameModeStageTitle_patches.cpp  CHudPause_patches.cpp  CTitleStateIntro_patches.cpp  CTitleStateMenu_patches.cpp  aspect_ratio_patches.cpp  inspire_patches.cpp  misc_patches.cpp  object_patches.cpp  player_patches.cpp  resident_patches.cpp
UnleashedRecomp/ui/: achievement_overlay.cpp  game_window.cpp  game_window.h
UnleashedRecomp/user/: paths.h
UnleashedRecomp/utils/: bit_stream.h  ring_buffer.h
UnleashedRecompLib/: CMakeLists.txt
UnleashedRecompLib/config/: Marathon.toml  SWA.toml  a.toml
docs/: BUILDING.md  DUMPING-en.md
flatpak/: README.md  io.github.hedge_dev.marathonrecomp.desktop  io.github.hedge_dev.marathonrecomp.json  io.github.hedge_dev.marathonrecomp.metainfo.xml  io.github.hedge_dev.unleashedrecomp.json  io.github.sonicnext_dev.marathonrecomp.desktop  io.github.sonicnext_dev.marathonrecomp.json  io.github.sonicnext_dev.marathonrecomp.metainfo.xml
scripts/: download_marathon_cli.sh  unpack_shaders.sh
tools/: CMakeLists.txt
tools/u8extract/: CMakeLists.txt  u8extract.cpp
tools/x_decompress/: CMakeLists.txt
(+97 files in other folders)
