add_subdirectory(${MARATHON_RECOMP_TOOLS_ROOT}/bc_diff)
add_subdirectory(${MARATHON_RECOMP_TOOLS_ROOT}/file_to_c)
add_subdirectory(${MARATHON_RECOMP_TOOLS_ROOT}/fshasher)
add_subdirectory(${MARATHON_RECOMP_TOOLS_ROOT}/u8extract)
add_subdirectory(${MARATHON_RECOMP_TOOLS_ROOT}/x_decompress)
add_subdirectory(${MARATHON_RECOMP_TOOLS_ROOT}/XenonRecomp)
add_subdirectory(${MARATHON_RECOMP_TOOLS_ROOT}/XenosRecomp)
